Fix overflowing on regular pages

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2242,7 +2242,6 @@ th {
   list-style: none;
   margin: 0.5em 0 -0.25em 1em;
   padding: 0;
-  width: 100%;
 }
 
 .p-breadcrumbs__item {
@@ -5687,6 +5686,7 @@ html {
 #app {
   display: flex;
   flex-flow: row wrap;
+  max-width: 100vw;
 }
 
 #app > * {
